test/arrays/intents/out/out-domain-no-elt.chpl
proc f(out A:[1..10]) {
}

var A:[1..10] int;
f(A);
